tutofix/book-module/main/default/objects/Book__c/fields/AcquisitionYear__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionYear__c</fullName>
    <description>Acquisition year of the book</description>
    <label>Acquisition year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>