tutofix/book-module/main/default/objects/Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Title of the book</description>
    <label>Author</label>
    <length>30</length>
    <type>Text</type>
</CustomField>