tutofix/book-module/main/default/objects/Book__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Condition of the book</description>
    <label>Condition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>